--- a/relazione.tex
+++ b/relazione.tex
@@ -8,6 +8,9 @@
 \usepackage[italian]{babel}
 \usepackage[utf8]{inputenc}
 \usepackage[hidelinks]{hyperref}
+\usepackage{setspace}
+\onehalfspacing
+
 \hypersetup{pdftitle={Progettazione di un dispositivo IoT basato su wake up radio},pdfauthor={Leonardo Emili}}
 
 \title{Progettazione di un dispositivo IoT basato su wake up radio}
@@ -28,6 +31,7 @@
 %\schoolprincipal{Dr. Alessandro Mei, PhD}
 
 \begin{document}
+\large
 
 \frontmatter
 \maketitle
@@ -65,7 +69,6 @@ nella comunicazione e nell'attesa che la precede, è quindi di vitale importanza
 oggetto di scaricamento delle batterie che li alimentano. Infatti, la morte prematura di un nodo può spesso avere conseguenze più grandi della semplice
 disconnessione dello stesso, poichè frequentemente si tratta di reti \emph{multi-hop} che realizzano la comunicazione passando attraverso nodi intermedi, si può
 verificare perfino la disconnessione dell'intera rete.\\
-
 
 
 Nel capitolo 2 ...\\
